...
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                IconButton(onClick = {
                    navController.navigate(NavRoutes.HOME)
                }) {
                    Icon(Icons.Filled.Home, contentDescription = "Home")
                }
                IconButton(onClick = {
                    navController.navigate(NavRoutes.PROFILE_CONFIG)
                }) {
                    Icon(
                        Icons.Filled.AccountBox,
...
