...

            android.util.Log.d("GroupViewModel", "restaurantId: $restaurantId")
            android.util.Log.d("GroupViewModel", "restaurantName: $restaurantName")
            android.util.Log.d("GroupViewModel", "votes: $votes")

            val restaurant =
                    Restaurant(restaurantId = restaurantId, name = restaurantName, location = "")

            android.util.Log.d("GroupViewModel", "🏪 Created restaurant object: $restaurant")

            android.util.Log.d("GroupViewModel", "⬆️ Setting _selectedRestaurant.value...")
            _selectedRestaurant.value = restaurant
            android.util.Log.d("GroupViewModel", "✅ _selectedRestaurant.value SET!")
...
